// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendTransactionForm should not call onBack callback if not provided 1`] = `
<div>
  <div
    class="sc-fzoXzr WYvOR"
  >
    <form
      class="space-y-8"
      data-testid="Form"
      id="send-transaction__form"
    >
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="network"
            label="Network"
          >
            Network
          </label>
        </div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-6-label"
          class="relative"
          role="combobox"
        >
          <label
            for="downshift-6-input"
            id="downshift-6-label"
          />
          <div
            class="relative flex items-center w-full flex-inline"
          >
            <div
              class="sc-fznyAO kmQcER flex w-full border rounded transition-colors duration-200 bg-theme-background border-theme-neutral-300 hover:outline-none hover:border-theme-primary"
            >
              <div
                class="px-4 py-2 flex-0 w-14"
              >
                <div
                  class="sc-fzplWN exzsOf border-theme-neutral-200"
                />
              </div>
              <div
                class="relative flex-1 p-1 font-semibold text-theme-neutral-800"
              >
                <div
                  class="relative z-10 w-full"
                  data-testid="select-network__typeahead-"
                >
                  <div
                    class="absolute left-0 font-semibold top-2 text-theme-neutral-light"
                  />
                </div>
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-6-label"
                  autocomplete="off"
                  class="relative z-20 w-full h-full font-semibold bg-transparent outline-none"
                  data-testid="select-asset__input"
                  id="downshift-6-input"
                  name="network"
                  placeholder="Enter a network name"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            aria-labelledby="downshift-6-label"
            class="select-asset__items"
            data-testid="select-asset__items"
            id="downshift-6-menu"
            role="listbox"
          >
            <div
              aria-selected="false"
              class="inline-block pt-6 mr-6 cursor-pointer"
              id="downshift-6-item-0"
              role="option"
            >
              <div
                class="sc-fzplWN iCUCxM text-theme-danger-400 border-theme-danger-light"
              >
                <div
                  class="sc-Axmtr wZFix"
                  height="26"
                  width="26"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              aria-selected="false"
              class="inline-block pt-6 mr-6 cursor-pointer"
              id="downshift-6-item-1"
              role="option"
            >
              <div
                class="sc-fzplWN iCUCxM text-theme-warning-400 border-theme-warning-200"
              >
                <div
                  class="sc-Axmtr wZFix"
                  height="26"
                  width="26"
                >
                  <svg>
                    btc.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              aria-selected="false"
              class="inline-block pt-6 mr-6 cursor-pointer"
              id="downshift-6-item-2"
              role="option"
            >
              <div
                class="sc-fzplWN iCUCxM text-theme-neutral-800 border-theme-neutral-600"
              >
                <div
                  class="sc-Axmtr wZFix"
                  height="26"
                  width="26"
                >
                  <svg>
                    eth.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              aria-selected="false"
              class="inline-block pt-6 mr-6 cursor-pointer"
              id="downshift-6-item-3"
              role="option"
            >
              <div
                class="sc-fzplWN iCUCxM text-theme-primary border-theme-primary-400"
              >
                <div
                  class="sc-Axmtr wZFix"
                  height="26"
                  width="26"
                >
                  <svg>
                    lsk.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              aria-selected="false"
              class="inline-block pt-6 mr-6 cursor-pointer"
              id="downshift-6-item-4"
              role="option"
            >
              <div
                class="sc-fzplWN iCUCxM text-theme-primary-dark border-theme-primary-500"
              >
                <div
                  class="sc-Axmtr wZFix"
                  height="26"
                  width="26"
                >
                  <svg>
                    xrp.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="sender"
            label="Sender"
          >
            Sender
          </label>
        </div>
        <div
          data-testid="sender-address"
        >
          <div>
            <button
              class="sc-fzqBZW iKvOTi SelectAddress  "
              data-testid="SelectAddress__wrapper"
              type="button"
            >
              <div
                class="sc-fzplWN exzsOf mx-4 bg-theme-neutral-200 border-theme-neutral-200"
              />
              <div
                class="absolute flex items-center right-4 space-x-3"
              >
                <div
                  class="sc-Axmtr hdGCex"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </button>
            <input
              class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 hidden"
              data-testid="SelectAddress__input"
              name="sender"
              readonly=""
              type="text"
              value=""
            />
          </div>
        </div>
      </fieldset>
      <div
        data-testid="recipient-address"
      >
        <div
          class="sc-fzoLag bQzdMH"
        >
          <div
            class="text-theme-neutral-dark hover:text-theme-primary"
          >
            <div
              class="flex items-center mb-2 space-x-2"
            >
              <div
                class="font-normal text-md transition-colors duration-100"
              >
                Select a Single or Multiple Recipient Transaction
              </div>
              <div>
                <div
                  class="rounded-full cursor-pointer bg-theme-primary-100 text-theme-primary-500"
                >
                  <div
                    class="sc-Axmtr hdGCex"
                    height="20"
                    width="20"
                  >
                    <svg>
                      questionmark.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-stretch select-buttons"
            >
              <button
                class="sc-AxjAm ddQVWI flex-1"
                color="primary"
                data-testid="add-recipient-is-single-toggle"
                type="button"
              >
                Single
              </button>
              <button
                class="sc-AxjAm ddJBbC flex-1 border-l-0"
                color="primary"
                data-testid="add-recipient-is-multiple-toggle"
                type="button"
              >
                Multiple
              </button>
            </div>
          </div>
          <div
            class="mt-8 mb-2 "
            data-testid="add-recipient__form-wrapper"
          >
            <div
              class="space-y-8"
            >
              <fieldset
                class="sc-AxirZ izhStr relative mt-1"
              >
                <div
                  class="mb-2"
                >
                  <label
                    class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                    data-testid="FormLabel"
                    for="recipientAddress"
                    label="Recipient"
                  >
                    Recipient
                  </label>
                </div>
                <div>
                  <div
                    class="relative flex items-center w-full text-left"
                    data-testid="SelectRecipient__wrapper"
                  >
                    <div
                      class="absolute left-1"
                    >
                      <div
                        class="sc-fzplWN exzsOf mx-3 bg-theme-neutral-200 border-theme-neutral-200"
                      />
                    </div>
                    <input
                      class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-14 pr-11"
                      data-testid="SelectRecipient__input"
                      name="recipientAddress"
                      type="text"
                      value=""
                    />
                    <div
                      class="absolute flex items-center cursor-pointer right-4 space-x-3"
                      data-testid="SelectRecipient__select-contact"
                    >
                      <div
                        class="sc-Axmtr hdGCex"
                        height="20"
                        width="20"
                      >
                        <svg>
                          user.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </fieldset>
              <fieldset
                class="sc-AxirZ izhStr relative mt-1"
              >
                <div
                  class="mb-2"
                >
                  <label
                    class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                    data-testid="FormLabel"
                    for="amount"
                    label="Amount ARK"
                  >
                    Amount ARK
                  </label>
                </div>
                <div
                  class="sc-AxheI IkGcK"
                >
                  <input
                    class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
                    data-testid="add-recipient__amount-input"
                    name="amount"
                    placeholder="Amount"
                    type="number"
                  />
                  <div
                    class="sc-AxhCb sc-AxgMl jreOpL"
                  >
                    <button
                      class="h-12 pl-6 pr-3 mr-1 bg-white text-theme-primary focus:outline-none"
                      data-testid="add-recipient__send-all"
                    >
                      Send All
                    </button>
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="smartbridge"
            label="Smartbridge"
          >
            Smartbridge
          </label>
        </div>
        <div
          class="sc-AxheI IkGcK"
        >
          <input
            class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
            data-testid="Input"
            maxlength="255"
            name="smartbridge"
            placeholder=" "
            type="text"
          />
          <div
            class="sc-AxhCb sc-AxgMl jreOpL"
          >
            <button
              class="px-4 text-theme-neutral-light focus:outline-none"
            >
              255 Max
            </button>
          </div>
        </div>
      </fieldset>
      <div
        class="flex items-center"
      >
        <div
          class="w-2/4"
        >
          <fieldset
            class="sc-AxirZ izhStr relative mt-1"
          >
            <div
              class="mb-2"
            >
              <label
                class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                for="fee"
                label="Fee ARK"
              >
                Fee ARK
              </label>
              <div
                class="sc-AxheI IkGcK"
              >
                <input
                  class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                  data-testid="InputCurrency"
                  name="fee"
                  type="text"
                  value="0"
                />
                <div
                  class="absolute bottom-0 w-full px-1"
                >
                  <div
                    class="flex flex-wrap justify-center"
                    data-testid="Range"
                  >
                    <div
                      class="sc-AxmLO fErXAA"
                      data-testid="Range__track"
                      style="transform: scale(1); cursor: pointer;"
                    >
                      <div
                        class="sc-fzozJi fxOiEw"
                        data-testid="Range__track__filled"
                      >
                        <div
                          aria-valuemax="100"
                          aria-valuemin="0"
                          aria-valuenow="0"
                          class="sc-fzoLsD iBGNss"
                          data-testid="Range__thumb"
                          draggable="false"
                          role="slider"
                          style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                          tabindex="0"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          class="w-2/4 text-right mt-6"
        >
          <div
            class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300"
            data-testid="SelectionBar"
            role="radiogroup"
          >
            <button
              aria-checked="false"
              class="sc-fzpans gWxirZ relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
              data-testid="SelectionBarOption"
              role="radio"
              type="button"
            >
              Last
            </button>
            <button
              aria-checked="false"
              class="sc-fzpans gWxirZ relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
              data-testid="SelectionBarOption"
              role="radio"
              type="button"
            >
              Min
            </button>
            <button
              aria-checked="false"
              class="sc-fzpans gWxirZ relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
              data-testid="SelectionBarOption"
              role="radio"
              type="button"
            >
              Average
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex justify-end space-x-3"
      >
        <button
          class="sc-AxjAm ddJBbC"
          color="primary"
          data-testid="send-transaction-click-back"
          type="button"
        >
          Back
        </button>
        <button
          class="sc-AxjAm ddQVWI"
          color="primary"
          data-testid="send-transaction-click-submit"
          type="submit"
        >
          Continue
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`SendTransactionForm should not call onSubmit callback if not provided 1`] = `
<div>
  <div
    class="sc-fzoXzr WYvOR"
  >
    <form
      class="space-y-8"
      data-testid="Form"
      id="send-transaction__form"
    >
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="network"
            label="Network"
          >
            Network
          </label>
        </div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-5-label"
          class="relative"
          role="combobox"
        >
          <label
            for="downshift-5-input"
            id="downshift-5-label"
          />
          <div
            class="relative flex items-center w-full flex-inline"
          >
            <div
              class="sc-fznyAO kmQcER flex w-full border rounded transition-colors duration-200 bg-theme-background border-theme-neutral-300 hover:outline-none hover:border-theme-primary"
            >
              <div
                class="px-4 py-2 flex-0 w-14"
              >
                <div
                  class="sc-fzplWN exzsOf border-theme-neutral-200"
                />
              </div>
              <div
                class="relative flex-1 p-1 font-semibold text-theme-neutral-800"
              >
                <div
                  class="relative z-10 w-full"
                  data-testid="select-network__typeahead-"
                >
                  <div
                    class="absolute left-0 font-semibold top-2 text-theme-neutral-light"
                  />
                </div>
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-5-label"
                  autocomplete="off"
                  class="relative z-20 w-full h-full font-semibold bg-transparent outline-none"
                  data-testid="select-asset__input"
                  id="downshift-5-input"
                  name="network"
                  placeholder="Enter a network name"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            aria-labelledby="downshift-5-label"
            class="select-asset__items"
            data-testid="select-asset__items"
            id="downshift-5-menu"
            role="listbox"
          >
            <div
              aria-selected="false"
              class="inline-block pt-6 mr-6 cursor-pointer"
              id="downshift-5-item-0"
              role="option"
            >
              <div
                class="sc-fzplWN iCUCxM text-theme-danger-400 border-theme-danger-light"
              >
                <div
                  class="sc-Axmtr wZFix"
                  height="26"
                  width="26"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              aria-selected="false"
              class="inline-block pt-6 mr-6 cursor-pointer"
              id="downshift-5-item-1"
              role="option"
            >
              <div
                class="sc-fzplWN iCUCxM text-theme-warning-400 border-theme-warning-200"
              >
                <div
                  class="sc-Axmtr wZFix"
                  height="26"
                  width="26"
                >
                  <svg>
                    btc.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              aria-selected="false"
              class="inline-block pt-6 mr-6 cursor-pointer"
              id="downshift-5-item-2"
              role="option"
            >
              <div
                class="sc-fzplWN iCUCxM text-theme-neutral-800 border-theme-neutral-600"
              >
                <div
                  class="sc-Axmtr wZFix"
                  height="26"
                  width="26"
                >
                  <svg>
                    eth.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              aria-selected="false"
              class="inline-block pt-6 mr-6 cursor-pointer"
              id="downshift-5-item-3"
              role="option"
            >
              <div
                class="sc-fzplWN iCUCxM text-theme-primary border-theme-primary-400"
              >
                <div
                  class="sc-Axmtr wZFix"
                  height="26"
                  width="26"
                >
                  <svg>
                    lsk.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              aria-selected="false"
              class="inline-block pt-6 mr-6 cursor-pointer"
              id="downshift-5-item-4"
              role="option"
            >
              <div
                class="sc-fzplWN iCUCxM text-theme-primary-dark border-theme-primary-500"
              >
                <div
                  class="sc-Axmtr wZFix"
                  height="26"
                  width="26"
                >
                  <svg>
                    xrp.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="sender"
            label="Sender"
          >
            Sender
          </label>
        </div>
        <div
          data-testid="sender-address"
        >
          <div>
            <button
              class="sc-fzqBZW iKvOTi SelectAddress  "
              data-testid="SelectAddress__wrapper"
              type="button"
            >
              <div
                class="sc-fzplWN exzsOf mx-4 bg-theme-neutral-200 border-theme-neutral-200"
              />
              <div
                class="absolute flex items-center right-4 space-x-3"
              >
                <div
                  class="sc-Axmtr hdGCex"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </button>
            <input
              class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 hidden"
              data-testid="SelectAddress__input"
              name="sender"
              readonly=""
              type="text"
              value=""
            />
          </div>
        </div>
      </fieldset>
      <div
        data-testid="recipient-address"
      >
        <div
          class="sc-fzoLag bQzdMH"
        >
          <div
            class="text-theme-neutral-dark hover:text-theme-primary"
          >
            <div
              class="flex items-center mb-2 space-x-2"
            >
              <div
                class="font-normal text-md transition-colors duration-100"
              >
                Select a Single or Multiple Recipient Transaction
              </div>
              <div>
                <div
                  class="rounded-full cursor-pointer bg-theme-primary-100 text-theme-primary-500"
                >
                  <div
                    class="sc-Axmtr hdGCex"
                    height="20"
                    width="20"
                  >
                    <svg>
                      questionmark.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-stretch select-buttons"
            >
              <button
                class="sc-AxjAm ddQVWI flex-1"
                color="primary"
                data-testid="add-recipient-is-single-toggle"
                type="button"
              >
                Single
              </button>
              <button
                class="sc-AxjAm ddJBbC flex-1 border-l-0"
                color="primary"
                data-testid="add-recipient-is-multiple-toggle"
                type="button"
              >
                Multiple
              </button>
            </div>
          </div>
          <div
            class="mt-8 mb-2 "
            data-testid="add-recipient__form-wrapper"
          >
            <div
              class="space-y-8"
            >
              <fieldset
                class="sc-AxirZ izhStr relative mt-1"
              >
                <div
                  class="mb-2"
                >
                  <label
                    class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                    data-testid="FormLabel"
                    for="recipientAddress"
                    label="Recipient"
                  >
                    Recipient
                  </label>
                </div>
                <div>
                  <div
                    class="relative flex items-center w-full text-left"
                    data-testid="SelectRecipient__wrapper"
                  >
                    <div
                      class="absolute left-1"
                    >
                      <div
                        class="sc-fzplWN exzsOf mx-3 bg-theme-neutral-200 border-theme-neutral-200"
                      />
                    </div>
                    <input
                      class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-14 pr-11"
                      data-testid="SelectRecipient__input"
                      name="recipientAddress"
                      type="text"
                      value=""
                    />
                    <div
                      class="absolute flex items-center cursor-pointer right-4 space-x-3"
                      data-testid="SelectRecipient__select-contact"
                    >
                      <div
                        class="sc-Axmtr hdGCex"
                        height="20"
                        width="20"
                      >
                        <svg>
                          user.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </fieldset>
              <fieldset
                class="sc-AxirZ izhStr relative mt-1"
              >
                <div
                  class="mb-2"
                >
                  <label
                    class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                    data-testid="FormLabel"
                    for="amount"
                    label="Amount ARK"
                  >
                    Amount ARK
                  </label>
                </div>
                <div
                  class="sc-AxheI IkGcK"
                >
                  <input
                    class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
                    data-testid="add-recipient__amount-input"
                    name="amount"
                    placeholder="Amount"
                    type="number"
                  />
                  <div
                    class="sc-AxhCb sc-AxgMl jreOpL"
                  >
                    <button
                      class="h-12 pl-6 pr-3 mr-1 bg-white text-theme-primary focus:outline-none"
                      data-testid="add-recipient__send-all"
                    >
                      Send All
                    </button>
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="smartbridge"
            label="Smartbridge"
          >
            Smartbridge
          </label>
        </div>
        <div
          class="sc-AxheI IkGcK"
        >
          <input
            class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
            data-testid="Input"
            maxlength="255"
            name="smartbridge"
            placeholder=" "
            type="text"
          />
          <div
            class="sc-AxhCb sc-AxgMl jreOpL"
          >
            <button
              class="px-4 text-theme-neutral-light focus:outline-none"
            >
              255 Max
            </button>
          </div>
        </div>
      </fieldset>
      <div
        class="flex items-center"
      >
        <div
          class="w-2/4"
        >
          <fieldset
            class="sc-AxirZ izhStr relative mt-1"
          >
            <div
              class="mb-2"
            >
              <label
                class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                for="fee"
                label="Fee ARK"
              >
                Fee ARK
              </label>
              <div
                class="sc-AxheI IkGcK"
              >
                <input
                  class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                  data-testid="InputCurrency"
                  name="fee"
                  type="text"
                  value="0"
                />
                <div
                  class="absolute bottom-0 w-full px-1"
                >
                  <div
                    class="flex flex-wrap justify-center"
                    data-testid="Range"
                  >
                    <div
                      class="sc-AxmLO fErXAA"
                      data-testid="Range__track"
                      style="transform: scale(1); cursor: pointer;"
                    >
                      <div
                        class="sc-fzozJi fxOiEw"
                        data-testid="Range__track__filled"
                      >
                        <div
                          aria-valuemax="100"
                          aria-valuemin="0"
                          aria-valuenow="0"
                          class="sc-fzoLsD iBGNss"
                          data-testid="Range__thumb"
                          draggable="false"
                          role="slider"
                          style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                          tabindex="0"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          class="w-2/4 text-right mt-6"
        >
          <div
            class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300"
            data-testid="SelectionBar"
            role="radiogroup"
          >
            <button
              aria-checked="false"
              class="sc-fzpans gWxirZ relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
              data-testid="SelectionBarOption"
              role="radio"
              type="button"
            >
              Last
            </button>
            <button
              aria-checked="false"
              class="sc-fzpans gWxirZ relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
              data-testid="SelectionBarOption"
              role="radio"
              type="button"
            >
              Min
            </button>
            <button
              aria-checked="false"
              class="sc-fzpans gWxirZ relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
              data-testid="SelectionBarOption"
              role="radio"
              type="button"
            >
              Average
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex justify-end space-x-3"
      >
        <button
          class="sc-AxjAm ddJBbC"
          color="primary"
          data-testid="send-transaction-click-back"
          type="button"
        >
          Back
        </button>
        <button
          class="sc-AxjAm ddQVWI"
          color="primary"
          data-testid="send-transaction-click-submit"
          type="submit"
        >
          Continue
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`SendTransactionForm should render 1`] = `
<div>
  <div
    class="sc-fzoXzr WYvOR"
  >
    <form
      class="space-y-8"
      data-testid="Form"
      id="send-transaction__form"
    >
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="network"
            label="Network"
          >
            Network
          </label>
        </div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          class="relative"
          role="combobox"
        >
          <label
            for="downshift-0-input"
            id="downshift-0-label"
          />
          <div
            class="relative flex items-center w-full flex-inline"
          >
            <div
              class="sc-fznyAO kmQcER flex w-full border rounded transition-colors duration-200 bg-theme-background border-theme-neutral-300 hover:outline-none hover:border-theme-primary"
            >
              <div
                class="px-4 py-2 flex-0 w-14"
              >
                <div
                  class="sc-fzplWN exzsOf border-theme-neutral-200"
                />
              </div>
              <div
                class="relative flex-1 p-1 font-semibold text-theme-neutral-800"
              >
                <div
                  class="relative z-10 w-full"
                  data-testid="select-network__typeahead-"
                >
                  <div
                    class="absolute left-0 font-semibold top-2 text-theme-neutral-light"
                  />
                </div>
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  class="relative z-20 w-full h-full font-semibold bg-transparent outline-none"
                  data-testid="select-asset__input"
                  id="downshift-0-input"
                  name="network"
                  placeholder="Enter a network name"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            aria-labelledby="downshift-0-label"
            class="select-asset__items"
            data-testid="select-asset__items"
            id="downshift-0-menu"
            role="listbox"
          >
            <div
              aria-selected="false"
              class="inline-block pt-6 mr-6 cursor-pointer"
              id="downshift-0-item-0"
              role="option"
            >
              <div
                class="sc-fzplWN iCUCxM text-theme-danger-400 border-theme-danger-light"
              >
                <div
                  class="sc-Axmtr wZFix"
                  height="26"
                  width="26"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              aria-selected="false"
              class="inline-block pt-6 mr-6 cursor-pointer"
              id="downshift-0-item-1"
              role="option"
            >
              <div
                class="sc-fzplWN iCUCxM text-theme-warning-400 border-theme-warning-200"
              >
                <div
                  class="sc-Axmtr wZFix"
                  height="26"
                  width="26"
                >
                  <svg>
                    btc.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              aria-selected="false"
              class="inline-block pt-6 mr-6 cursor-pointer"
              id="downshift-0-item-2"
              role="option"
            >
              <div
                class="sc-fzplWN iCUCxM text-theme-neutral-800 border-theme-neutral-600"
              >
                <div
                  class="sc-Axmtr wZFix"
                  height="26"
                  width="26"
                >
                  <svg>
                    eth.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              aria-selected="false"
              class="inline-block pt-6 mr-6 cursor-pointer"
              id="downshift-0-item-3"
              role="option"
            >
              <div
                class="sc-fzplWN iCUCxM text-theme-primary border-theme-primary-400"
              >
                <div
                  class="sc-Axmtr wZFix"
                  height="26"
                  width="26"
                >
                  <svg>
                    lsk.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              aria-selected="false"
              class="inline-block pt-6 mr-6 cursor-pointer"
              id="downshift-0-item-4"
              role="option"
            >
              <div
                class="sc-fzplWN iCUCxM text-theme-primary-dark border-theme-primary-500"
              >
                <div
                  class="sc-Axmtr wZFix"
                  height="26"
                  width="26"
                >
                  <svg>
                    xrp.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="sender"
            label="Sender"
          >
            Sender
          </label>
        </div>
        <div
          data-testid="sender-address"
        >
          <div>
            <button
              class="sc-fzqBZW iKvOTi SelectAddress  "
              data-testid="SelectAddress__wrapper"
              type="button"
            >
              <div
                class="sc-fzplWN exzsOf mx-4 bg-theme-neutral-200 border-theme-neutral-200"
              />
              <div
                class="absolute flex items-center right-4 space-x-3"
              >
                <div
                  class="sc-Axmtr hdGCex"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </button>
            <input
              class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 hidden"
              data-testid="SelectAddress__input"
              name="sender"
              readonly=""
              type="text"
              value=""
            />
          </div>
        </div>
      </fieldset>
      <div
        data-testid="recipient-address"
      >
        <div
          class="sc-fzoLag bQzdMH"
        >
          <div
            class="text-theme-neutral-dark hover:text-theme-primary"
          >
            <div
              class="flex items-center mb-2 space-x-2"
            >
              <div
                class="font-normal text-md transition-colors duration-100"
              >
                Select a Single or Multiple Recipient Transaction
              </div>
              <div>
                <div
                  class="rounded-full cursor-pointer bg-theme-primary-100 text-theme-primary-500"
                >
                  <div
                    class="sc-Axmtr hdGCex"
                    height="20"
                    width="20"
                  >
                    <svg>
                      questionmark.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-stretch select-buttons"
            >
              <button
                class="sc-AxjAm ddQVWI flex-1"
                color="primary"
                data-testid="add-recipient-is-single-toggle"
                type="button"
              >
                Single
              </button>
              <button
                class="sc-AxjAm ddJBbC flex-1 border-l-0"
                color="primary"
                data-testid="add-recipient-is-multiple-toggle"
                type="button"
              >
                Multiple
              </button>
            </div>
          </div>
          <div
            class="mt-8 mb-2 "
            data-testid="add-recipient__form-wrapper"
          >
            <div
              class="space-y-8"
            >
              <fieldset
                class="sc-AxirZ izhStr relative mt-1"
              >
                <div
                  class="mb-2"
                >
                  <label
                    class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                    data-testid="FormLabel"
                    for="recipientAddress"
                    label="Recipient"
                  >
                    Recipient
                  </label>
                </div>
                <div>
                  <div
                    class="relative flex items-center w-full text-left"
                    data-testid="SelectRecipient__wrapper"
                  >
                    <div
                      class="absolute left-1"
                    >
                      <div
                        class="sc-fzplWN exzsOf mx-3 bg-theme-neutral-200 border-theme-neutral-200"
                      />
                    </div>
                    <input
                      class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-14 pr-11"
                      data-testid="SelectRecipient__input"
                      name="recipientAddress"
                      type="text"
                      value=""
                    />
                    <div
                      class="absolute flex items-center cursor-pointer right-4 space-x-3"
                      data-testid="SelectRecipient__select-contact"
                    >
                      <div
                        class="sc-Axmtr hdGCex"
                        height="20"
                        width="20"
                      >
                        <svg>
                          user.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </fieldset>
              <fieldset
                class="sc-AxirZ izhStr relative mt-1"
              >
                <div
                  class="mb-2"
                >
                  <label
                    class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                    data-testid="FormLabel"
                    for="amount"
                    label="Amount ARK"
                  >
                    Amount ARK
                  </label>
                </div>
                <div
                  class="sc-AxheI IkGcK"
                >
                  <input
                    class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
                    data-testid="add-recipient__amount-input"
                    name="amount"
                    placeholder="Amount"
                    type="number"
                  />
                  <div
                    class="sc-AxhCb sc-AxgMl jreOpL"
                  >
                    <button
                      class="h-12 pl-6 pr-3 mr-1 bg-white text-theme-primary focus:outline-none"
                      data-testid="add-recipient__send-all"
                    >
                      Send All
                    </button>
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="smartbridge"
            label="Smartbridge"
          >
            Smartbridge
          </label>
        </div>
        <div
          class="sc-AxheI IkGcK"
        >
          <input
            class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
            data-testid="Input"
            maxlength="255"
            name="smartbridge"
            placeholder=" "
            type="text"
          />
          <div
            class="sc-AxhCb sc-AxgMl jreOpL"
          >
            <button
              class="px-4 text-theme-neutral-light focus:outline-none"
            >
              255 Max
            </button>
          </div>
        </div>
      </fieldset>
      <div
        class="flex items-center"
      >
        <div
          class="w-2/4"
        >
          <fieldset
            class="sc-AxirZ izhStr relative mt-1"
          >
            <div
              class="mb-2"
            >
              <label
                class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                for="fee"
                label="Fee ARK"
              >
                Fee ARK
              </label>
              <div
                class="sc-AxheI IkGcK"
              >
                <input
                  class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                  data-testid="InputCurrency"
                  name="fee"
                  type="text"
                  value="0"
                />
                <div
                  class="absolute bottom-0 w-full px-1"
                >
                  <div
                    class="flex flex-wrap justify-center"
                    data-testid="Range"
                  >
                    <div
                      class="sc-AxmLO fErXAA"
                      data-testid="Range__track"
                      style="transform: scale(1); cursor: pointer;"
                    >
                      <div
                        class="sc-fzozJi fxOiEw"
                        data-testid="Range__track__filled"
                      >
                        <div
                          aria-valuemax="100"
                          aria-valuemin="0"
                          aria-valuenow="0"
                          class="sc-fzoLsD iBGNss"
                          data-testid="Range__thumb"
                          draggable="false"
                          role="slider"
                          style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                          tabindex="0"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          class="w-2/4 text-right mt-6"
        >
          <div
            class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300"
            data-testid="SelectionBar"
            role="radiogroup"
          >
            <button
              aria-checked="false"
              class="sc-fzpans gWxirZ relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
              data-testid="SelectionBarOption"
              role="radio"
              type="button"
            >
              Last
            </button>
            <button
              aria-checked="false"
              class="sc-fzpans gWxirZ relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
              data-testid="SelectionBarOption"
              role="radio"
              type="button"
            >
              Min
            </button>
            <button
              aria-checked="false"
              class="sc-fzpans gWxirZ relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
              data-testid="SelectionBarOption"
              role="radio"
              type="button"
            >
              Average
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex justify-end space-x-3"
      >
        <button
          class="sc-AxjAm ddJBbC"
          color="primary"
          data-testid="send-transaction-click-back"
          type="button"
        >
          Back
        </button>
        <button
          class="sc-AxjAm ddQVWI"
          color="primary"
          data-testid="send-transaction-click-submit"
          type="submit"
        >
          Continue
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`SendTransactionForm should set available amount 1`] = `
<div>
  <div
    class="sc-fzoXzr WYvOR"
  >
    <form
      class="space-y-8"
      data-testid="Form"
      id="send-transaction__form"
    >
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="network"
            label="Network"
          >
            Network
          </label>
        </div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-2-label"
          class="relative"
          role="combobox"
        >
          <label
            for="downshift-2-input"
            id="downshift-2-label"
          />
          <div
            class="relative flex items-center w-full flex-inline"
          >
            <div
              class="sc-fznyAO kmQcER flex w-full border rounded transition-colors duration-200 bg-theme-background border-theme-neutral-300 hover:outline-none hover:border-theme-primary"
            >
              <div
                class="px-4 py-2 flex-0 w-14"
              >
                <div
                  class="sc-fzplWN exzsOf border-theme-neutral-200"
                />
              </div>
              <div
                class="relative flex-1 p-1 font-semibold text-theme-neutral-800"
              >
                <div
                  class="relative z-10 w-full"
                  data-testid="select-network__typeahead-"
                >
                  <div
                    class="absolute left-0 font-semibold top-2 text-theme-neutral-light"
                  />
                </div>
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-2-label"
                  autocomplete="off"
                  class="relative z-20 w-full h-full font-semibold bg-transparent outline-none"
                  data-testid="select-asset__input"
                  id="downshift-2-input"
                  name="network"
                  placeholder="Enter a network name"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="sender"
            label="Sender"
          >
            Sender
          </label>
        </div>
        <div
          data-testid="sender-address"
        >
          <div>
            <button
              class="sc-fzqBZW iKvOTi SelectAddress  "
              data-testid="SelectAddress__wrapper"
              type="button"
            >
              <div
                class="sc-fzplWN exzsOf mx-4 bg-theme-neutral-200 border-theme-neutral-200"
              />
              <div
                class="absolute flex items-center right-4 space-x-3"
              >
                <div
                  class="sc-Axmtr hdGCex"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </button>
            <input
              class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 hidden"
              data-testid="SelectAddress__input"
              name="sender"
              readonly=""
              type="text"
              value=""
            />
          </div>
        </div>
      </fieldset>
      <div
        data-testid="recipient-address"
      >
        <div
          class="sc-fzoLag bQzdMH"
        >
          <div
            class="text-theme-neutral-dark hover:text-theme-primary"
          >
            <div
              class="flex items-center mb-2 space-x-2"
            >
              <div
                class="font-normal text-md transition-colors duration-100"
              >
                Select a Single or Multiple Recipient Transaction
              </div>
              <div>
                <div
                  class="rounded-full cursor-pointer bg-theme-primary-100 text-theme-primary-500"
                >
                  <div
                    class="sc-Axmtr hdGCex"
                    height="20"
                    width="20"
                  >
                    <svg>
                      questionmark.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex items-stretch select-buttons"
            >
              <button
                class="sc-AxjAm ddQVWI flex-1"
                color="primary"
                data-testid="add-recipient-is-single-toggle"
                type="button"
              >
                Single
              </button>
              <button
                class="sc-AxjAm ddJBbC flex-1 border-l-0"
                color="primary"
                data-testid="add-recipient-is-multiple-toggle"
                type="button"
              >
                Multiple
              </button>
            </div>
          </div>
          <div
            class="mt-8 mb-2 "
            data-testid="add-recipient__form-wrapper"
          >
            <div
              class="space-y-8"
            >
              <fieldset
                class="sc-AxirZ izhStr relative mt-1"
              >
                <div
                  class="mb-2"
                >
                  <label
                    class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                    data-testid="FormLabel"
                    for="recipientAddress"
                    label="Recipient"
                  >
                    Recipient
                  </label>
                </div>
                <div>
                  <div
                    class="relative flex items-center w-full text-left"
                    data-testid="SelectRecipient__wrapper"
                  >
                    <div
                      class="absolute left-1"
                    >
                      <div
                        class="sc-fzplWN exzsOf mx-3 bg-theme-neutral-200 border-theme-neutral-200"
                      />
                    </div>
                    <input
                      class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pl-14 pr-11"
                      data-testid="SelectRecipient__input"
                      name="recipientAddress"
                      type="text"
                      value=""
                    />
                    <div
                      class="absolute flex items-center cursor-pointer right-4 space-x-3"
                      data-testid="SelectRecipient__select-contact"
                    >
                      <div
                        class="sc-Axmtr hdGCex"
                        height="20"
                        width="20"
                      >
                        <svg>
                          user.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </fieldset>
              <fieldset
                class="sc-AxirZ izhStr relative mt-1"
              >
                <div
                  class="mb-2"
                >
                  <label
                    class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                    data-testid="FormLabel"
                    for="amount"
                    label="Amount ARK"
                  >
                    Amount ARK
                  </label>
                </div>
                <div
                  class="sc-AxheI IkGcK"
                >
                  <input
                    class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
                    data-testid="add-recipient__amount-input"
                    name="amount"
                    placeholder="Amount"
                    type="number"
                  />
                  <div
                    class="sc-AxhCb sc-AxgMl jreOpL"
                  >
                    <button
                      class="h-12 pl-6 pr-3 mr-1 bg-white text-theme-primary focus:outline-none"
                      data-testid="add-recipient__send-all"
                    >
                      Send All
                    </button>
                  </div>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <fieldset
        class="sc-AxirZ izhStr relative mt-1"
      >
        <div
          class="mb-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
            data-testid="FormLabel"
            for="smartbridge"
            label="Smartbridge"
          >
            Smartbridge
          </label>
        </div>
        <div
          class="sc-AxheI IkGcK"
        >
          <input
            class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-20"
            data-testid="Input"
            maxlength="255"
            name="smartbridge"
            placeholder=" "
            type="text"
          />
          <div
            class="sc-AxhCb sc-AxgMl jreOpL"
          >
            <button
              class="px-4 text-theme-neutral-light focus:outline-none"
            >
              255 Max
            </button>
          </div>
        </div>
      </fieldset>
      <div
        class="flex items-center"
      >
        <div
          class="w-2/4"
        >
          <fieldset
            class="sc-AxirZ izhStr relative mt-1"
          >
            <div
              class="mb-2"
            >
              <label
                class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
                data-testid="FormLabel"
                for="fee"
                label="Fee ARK"
              >
                Fee ARK
              </label>
              <div
                class="sc-AxheI IkGcK"
              >
                <input
                  class="sc-AxiKw ffjERP overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 "
                  data-testid="InputCurrency"
                  name="fee"
                  type="text"
                  value="0"
                />
                <div
                  class="absolute bottom-0 w-full px-1"
                >
                  <div
                    class="flex flex-wrap justify-center"
                    data-testid="Range"
                  >
                    <div
                      class="sc-AxmLO fErXAA"
                      data-testid="Range__track"
                      style="transform: scale(1); cursor: pointer;"
                    >
                      <div
                        class="sc-fzozJi fxOiEw"
                        data-testid="Range__track__filled"
                      >
                        <div
                          aria-valuemax="100"
                          aria-valuemin="0"
                          aria-valuenow="0"
                          class="sc-fzoLsD iBGNss"
                          data-testid="Range__thumb"
                          draggable="false"
                          role="slider"
                          style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                          tabindex="0"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </fieldset>
        </div>
        <div
          class="w-2/4 text-right mt-6"
        >
          <div
            class="inline-flex items-center flex-shrink-0 overflow-hidden border rounded border-theme-neutral-300"
            data-testid="SelectionBar"
            role="radiogroup"
          >
            <button
              aria-checked="false"
              class="sc-fzpans gWxirZ relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
              data-testid="SelectionBarOption"
              role="radio"
              type="button"
            >
              Last
            </button>
            <button
              aria-checked="false"
              class="sc-fzpans gWxirZ relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
              data-testid="SelectionBarOption"
              role="radio"
              type="button"
            >
              Min
            </button>
            <button
              aria-checked="false"
              class="sc-fzpans gWxirZ relative px-5 border-transparent focus:outline-none border-b-3 transition-colors duration-300"
              data-testid="SelectionBarOption"
              role="radio"
              type="button"
            >
              Average
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex justify-end space-x-3"
      >
        <button
          class="sc-AxjAm ddJBbC"
          color="primary"
          data-testid="send-transaction-click-back"
          type="button"
        >
          Back
        </button>
        <button
          class="sc-AxjAm ddQVWI"
          color="primary"
          data-testid="send-transaction-click-submit"
          type="submit"
        >
          Continue
        </button>
      </div>
    </form>
  </div>
</div>
`;
